--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -19,3 +19,7 @@
      "outputs": [],
      "prompt_number": 42
     },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
