--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -25,3 +25,5 @@
      "input": [
       "import string\n",
       "import nltk\n",
+      "import numpy as np\n",
+      "from nltk.stem.porter import *\n",
