--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -27,3 +27,5 @@
       "import nltk\n",
       "import numpy as np\n",
       "from nltk.stem.porter import *\n",
+      "from nltk.corpus import stopwords\n",
+      "import sklearn\n",
