--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -29,3 +29,4 @@
       "from nltk.stem.porter import *\n",
       "from nltk.corpus import stopwords\n",
       "import sklearn\n",
+      "from sklearn.metrics.pairwise import cosine_similarity\n",
