sched: Change rq->nr_running to unsigned int

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -30,3 +30,5 @@
       "from nltk.corpus import stopwords\n",
       "import sklearn\n",
       "from sklearn.metrics.pairwise import cosine_similarity\n",
+      "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+      "from nltk.metrics import windowdiff"
