Move to etc/nxml

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -40,3 +40,6 @@
     },
     {
      "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Function to plot graphs required for Text Tiling Algorithm\n",
