Fix checkstyle warnings

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -43,3 +43,4 @@
      "collapsed": false,
      "input": [
       "#Function to plot graphs required for Text Tiling Algorithm\n",
+      "def plot_fig(x,score,heading,fig_no):\n",
