--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -44,3 +44,7 @@
      "input": [
       "#Function to plot graphs required for Text Tiling Algorithm\n",
       "def plot_fig(x,score,heading,fig_no):\n",
+      "    fig = plt.figure(fig_no,figsize=(10,6))\n",
+      "    ax = fig.add_subplot(111)\n",
+      "    ax.plot(x,score,label=heading)\n",
+      "    ax.legend()"
