Updated the imagemagick feedstock.

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -49,3 +49,6 @@
       "    ax.plot(x,score,label=heading)\n",
       "    ax.legend()"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
