--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -62,3 +62,5 @@
       "\n",
       "f = open('alien-life.txt','r')\n",
       "doc=f.read()\n",
+      "f.close()\n",
+      "# The em-dash(long hyphen) is not recognised by ASCII. So, it is replaced with the hyphen.\n",
