--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -64,3 +64,4 @@
       "doc=f.read()\n",
       "f.close()\n",
       "# The em-dash(long hyphen) is not recognised by ASCII. So, it is replaced with the hyphen.\n",
+      "if \"\u2014\" in doc:\n",
