minor code simplification

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -65,3 +65,4 @@
       "f.close()\n",
       "# The em-dash(long hyphen) is not recognised by ASCII. So, it is replaced with the hyphen.\n",
       "if \"\u2014\" in doc:\n",
+      "    doc = doc.replace(\"\u2014\", \"-\")\n",
