--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -66,3 +66,5 @@
       "# The em-dash(long hyphen) is not recognised by ASCII. So, it is replaced with the hyphen.\n",
       "if \"\u2014\" in doc:\n",
       "    doc = doc.replace(\"\u2014\", \"-\")\n",
+      "#The original encoding of the text-file is in utf-8 format.So decoding the string from utf-8\n",
+      "doc=doc.decode('utf-8')\n",
