--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -68,3 +68,4 @@
       "    doc = doc.replace(\"\u2014\", \"-\")\n",
       "#The original encoding of the text-file is in utf-8 format.So decoding the string from utf-8\n",
       "doc=doc.decode('utf-8')\n",
+      "#Encoding it into ascii format\n",
