--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -69,3 +69,4 @@
       "#The original encoding of the text-file is in utf-8 format.So decoding the string from utf-8\n",
       "doc=doc.decode('utf-8')\n",
       "#Encoding it into ascii format\n",
+      "doc=doc.encode('ascii','ignore')\n",
