--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -70,3 +70,4 @@
       "doc=doc.decode('utf-8')\n",
       "#Encoding it into ascii format\n",
       "doc=doc.encode('ascii','ignore')\n",
+      "doc=doc.lower()"
