--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -71,3 +71,5 @@
       "#Encoding it into ascii format\n",
       "doc=doc.encode('ascii','ignore')\n",
       "doc=doc.lower()"
+     ],
+     "language": "python",
