CUI/DEMO: add compiled code

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -80,3 +80,6 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [
+      "#Saving a copy of original corpus along with the $$ sign to be later used for Windowdiff measure\n",
+      "doc_copy=doc\n",
