bridge: mdb: fix double add notification

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -83,3 +83,6 @@
      "input": [
       "#Saving a copy of original corpus along with the $$ sign to be later used for Windowdiff measure\n",
       "doc_copy=doc\n",
+      "ref_word=[]\n",
+      "p = re.compile(r'(\\n)|(\\r)|(\\t)|([!\"#%&()*+,-./:;<=>?@\\[\\\\\\]^_`{|}~])', re.IGNORECASE)\n",
+      "doc_copy=re.sub(p,' ',doc_copy)\n",
