--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -86,3 +86,6 @@
       "ref_word=[]\n",
       "p = re.compile(r'(\\n)|(\\r)|(\\t)|([!\"#%&()*+,-./:;<=>?@\\[\\\\\\]^_`{|}~])', re.IGNORECASE)\n",
       "doc_copy=re.sub(p,' ',doc_copy)\n",
+      "stemmer=PorterStemmer()\n",
+      "for word in doc_copy.split(\" \"):\n",
+      "    if word not in stopwords.words('english') and stemmer.stem_word(word) not in stopwords.words('english'):\n",
