--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -89,3 +89,5 @@
       "stemmer=PorterStemmer()\n",
       "for word in doc_copy.split(\" \"):\n",
       "    if word not in stopwords.words('english') and stemmer.stem_word(word) not in stopwords.words('english'):\n",
+      "        if word!=\" \" and word!=\"\":\n",
+      "            ref_word.append(stemmer.stem_word(word))"
