--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -92,3 +92,5 @@
       "        if word!=\" \" and word!=\"\":\n",
       "            ref_word.append(stemmer.stem_word(word))"
      ],
+     "language": "python",
+     "metadata": {},
