--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -99,3 +99,8 @@
     },
     {
      "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "TextTiling Algorithm"
+     ]
