usb: option: Add Telewell TW-LTE 4G

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -109,3 +109,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#Preparation for TextTiling Algorithm Implementation\n",
+      "#Stripping punctuation\n",
+      "#Removing new-line characters and punctuations\n",
