--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -112,3 +112,5 @@
       "#Preparation for TextTiling Algorithm Implementation\n",
       "#Stripping punctuation\n",
       "#Removing new-line characters and punctuations\n",
+      "p = re.compile(r'(\\n)|(\\r)|(\\t)|([!\"#$%&()*+,-./:;<=>?@\\[\\\\\\]^_`{|}~])', re.IGNORECASE)\n",
+      "doc=re.sub(p,' ',doc)"
