Sound Control: (Optional) work around for Nexus 4/5 audio issues

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -124,3 +124,4 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#Sen_length represents the desired sentence length that we are focusing on \n",
