--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -125,3 +125,4 @@
      "collapsed": false,
      "input": [
       "#Sen_length represents the desired sentence length that we are focusing on \n",
+      "#Doc represents the corpus of text\n",
