--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -126,3 +126,4 @@
      "input": [
       "#Sen_length represents the desired sentence length that we are focusing on \n",
       "#Doc represents the corpus of text\n",
+      "#Fig no represents the figure no that we want to give to the graph\n",
