--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -127,3 +127,5 @@
       "#Sen_length represents the desired sentence length that we are focusing on \n",
       "#Doc represents the corpus of text\n",
       "#Fig no represents the figure no that we want to give to the graph\n",
+      "def text_tiling(doc,sen_len,fig_no):\n",
+      "    \n",
