--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -129,3 +129,5 @@
       "#Fig no represents the figure no that we want to give to the graph\n",
       "def text_tiling(doc,sen_len,fig_no):\n",
       "    \n",
+      "    #Porter Stemming and removing stop words\n",
+      "    stemmer=PorterStemmer() \n",
