--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -131,3 +131,6 @@
       "    \n",
       "    #Porter Stemming and removing stop words\n",
       "    stemmer=PorterStemmer() \n",
+      "    sentences=[]\n",
+      "    sentence=\"\"\n",
+      "    j=0\n",
