--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -134,3 +134,5 @@
       "    sentences=[]\n",
       "    sentence=\"\"\n",
       "    j=0\n",
+      "    for word in doc.split(\" \"):\n",
+      "        if word not in stopwords.words('english') and word!=\" \" and word!=\"\":\n",
