--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -137,3 +137,5 @@
       "    for word in doc.split(\" \"):\n",
       "        if word not in stopwords.words('english') and word!=\" \" and word!=\"\":\n",
       "            j=j+1\n",
+      "            sentence=sentence + stemmer.stem_word(word)+' '\n",
+      "            if j==sen_len:\n",
