vfs: d_obtain_alias() needs to use "/" as default name.

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -139,3 +139,6 @@
       "            j=j+1\n",
       "            sentence=sentence + stemmer.stem_word(word)+' '\n",
       "            if j==sen_len:\n",
+      "                # -1 is to prevent the whitespace that is appended at the end to be included in the sentence\n",
+      "                sentences.append(sentence[:-1])\n",
+      "                sentence=\"\"\n",
