remove unecessary files

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -143,3 +143,4 @@
       "                sentences.append(sentence[:-1])\n",
       "                sentence=\"\"\n",
       "                j=0\n",
+      "    #If the last sentence is of length less than sen_length\n",
