[release] Updated versions after release

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -144,3 +144,5 @@
       "                sentence=\"\"\n",
       "                j=0\n",
       "    #If the last sentence is of length less than sen_length\n",
+      "    sentences.append(sentence[:-1])\n",
+      " \n",
