Prepare next release

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -146,3 +146,4 @@
       "    #If the last sentence is of length less than sen_length\n",
       "    sentences.append(sentence[:-1])\n",
       " \n",
+      "    #Vectorizing Sentences using Sklearn to determine Cosine Similarity between adjacent sentences\n",
