Small change to README

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -147,3 +147,4 @@
       "    sentences.append(sentence[:-1])\n",
       " \n",
       "    #Vectorizing Sentences using Sklearn to determine Cosine Similarity between adjacent sentences\n",
+      "    tfidf_vectorizer = TfidfVectorizer()\n",
