--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -148,3 +148,4 @@
       " \n",
       "    #Vectorizing Sentences using Sklearn to determine Cosine Similarity between adjacent sentences\n",
       "    tfidf_vectorizer = TfidfVectorizer()\n",
+      "    tfidf_matrix = tfidf_vectorizer.fit_transform(sentences)\n",
