--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -149,3 +149,5 @@
       "    #Vectorizing Sentences using Sklearn to determine Cosine Similarity between adjacent sentences\n",
       "    tfidf_vectorizer = TfidfVectorizer()\n",
       "    tfidf_matrix = tfidf_vectorizer.fit_transform(sentences)\n",
+      "    score=[]\n",
+      "    for i in range(0,tfidf_matrix.shape[0]-2):\n",
