--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -151,3 +151,6 @@
       "    tfidf_matrix = tfidf_vectorizer.fit_transform(sentences)\n",
       "    score=[]\n",
       "    for i in range(0,tfidf_matrix.shape[0]-2):\n",
+      "        score.append(cosine_similarity(tfidf_matrix[i:i+1], tfidf_matrix[i+1:i+2])[0][0])\n",
+      "    \n",
+      "    #Plotting Cosine Similarity \n",
