--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -154,3 +154,4 @@
       "        score.append(cosine_similarity(tfidf_matrix[i:i+1], tfidf_matrix[i+1:i+2])[0][0])\n",
       "    \n",
       "    #Plotting Cosine Similarity \n",
+      "    plot_fig(range(1,tfidf_matrix.shape[0]-1),score,'Lexical Similarity with Sentence Length '+ str(sen_len),fig_no)\n",
