--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -156,3 +156,4 @@
       "    #Plotting Cosine Similarity \n",
       "    plot_fig(range(1,tfidf_matrix.shape[0]-1),score,'Lexical Similarity with Sentence Length '+ str(sen_len),fig_no)\n",
       "    \n",
+      "    #Implementing Windowdiff measure\n",
