Clean up some tests

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -157,3 +157,4 @@
       "    plot_fig(range(1,tfidf_matrix.shape[0]-1),score,'Lexical Similarity with Sentence Length '+ str(sen_len),fig_no)\n",
       "    \n",
       "    #Implementing Windowdiff measure\n",
+      "    mean_score=np.mean(score)\n",
