--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -158,3 +158,4 @@
       "    \n",
       "    #Implementing Windowdiff measure\n",
       "    mean_score=np.mean(score)\n",
+      "    std_score=np.std(score)\n",
