more style tweaks

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -159,3 +159,5 @@
       "    #Implementing Windowdiff measure\n",
       "    mean_score=np.mean(score)\n",
       "    std_score=np.std(score)\n",
+      "    #Threshold is defined as Mean Score - Standard Deviation\n",
+      "    threshold=mean_score-std_score\n",
