--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -161,3 +161,5 @@
       "    std_score=np.std(score)\n",
       "    #Threshold is defined as Mean Score - Standard Deviation\n",
       "    threshold=mean_score-std_score\n",
+      "    boundary=[]\n",
+      "    for i in range(0,len(score)-2): \n",
