--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -167,3 +167,4 @@
       "        #If depth is greater than threshold, then there will be a dissimilariy between sentence 2 and sentence 3, so we are marking sentence 2 as the boundary\n",
       "        depth=score[i]-score[i+1]+score[i+2]-score[i+1]\n",
       "        if depth>=threshold:\n",
+      "            boundary.append(i+1) #Storing positions of Sentences that represent a boundary\n",
