--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -168,3 +168,4 @@
       "        depth=score[i]-score[i+1]+score[i+2]-score[i+1]\n",
       "        if depth>=threshold:\n",
       "            boundary.append(i+1) #Storing positions of Sentences that represent a boundary\n",
+      "    #Replacing boundaries with 1 and words with 0\n",
