--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -169,3 +169,4 @@
       "        if depth>=threshold:\n",
       "            boundary.append(i+1) #Storing positions of Sentences that represent a boundary\n",
       "    #Replacing boundaries with 1 and words with 0\n",
+      "    boundary_string=''\n",
