Pontoon: Update Kazakh (kk) localization of Common Voice

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -170,3 +170,4 @@
       "            boundary.append(i+1) #Storing positions of Sentences that represent a boundary\n",
       "    #Replacing boundaries with 1 and words with 0\n",
       "    boundary_string=''\n",
+      "    for i in range(0,len(sentences)):\n",
