--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -171,3 +171,5 @@
       "    #Replacing boundaries with 1 and words with 0\n",
       "    boundary_string=''\n",
       "    for i in range(0,len(sentences)):\n",
+      "        boundary_string=boundary_string+sentences[i]+' '\n",
+      "        if i in boundary:\n",
