update sample data

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -173,3 +173,4 @@
       "    for i in range(0,len(sentences)):\n",
       "        boundary_string=boundary_string+sentences[i]+' '\n",
       "        if i in boundary:\n",
+      "            boundary_string=boundary_string+' $$ '  \n",
