More readme updates

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -175,3 +175,4 @@
       "        if i in boundary:\n",
       "            boundary_string=boundary_string+' $$ '  \n",
       "        \n",
+      "    return boundary_string\n"
