--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -194,3 +194,5 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def window_diff(ref_word,doc,sen_len,fig_no):\n",
+      "    #Call to TextTiling Function\n",
