update project structure

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -196,3 +196,5 @@
      "input": [
       "def window_diff(ref_word,doc,sen_len,fig_no):\n",
       "    #Call to TextTiling Function\n",
+      "    hypo=text_tiling(doc,sen_len,fig_no)\n",
+      "    #Splitting Hypothesis Words\n",
