Fix clippy warnings

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -198,3 +198,4 @@
       "    #Call to TextTiling Function\n",
       "    hypo=text_tiling(doc,sen_len,fig_no)\n",
       "    #Splitting Hypothesis Words\n",
+      "    hypo_words=[word for word in hypo.split(' ') if word!='' and word not in stopwords.words('english')]\n",
