bql: Avoid possible inconsistent calculation.

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -200,3 +200,4 @@
       "    #Splitting Hypothesis Words\n",
       "    hypo_words=[word for word in hypo.split(' ') if word!='' and word not in stopwords.words('english')]\n",
       "    #Storing supervised input\n",
+      "    para_words=ref_word\n",
