--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -205,3 +205,4 @@
       "    j=0\n",
       "    hypo_string=''\n",
       "    para_string=''\n",
+      "    # What this loop does can be explained by an example: Suppose we have total of 3 words and \n",
