--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -206,3 +206,5 @@
       "    hypo_string=''\n",
       "    para_string=''\n",
       "    # What this loop does can be explained by an example: Suppose we have total of 3 words and \n",
+      "    # we have boundaries after two words in hypothesis  (hey man $$ yep) and after one word in training( hey $$ man yep)\n",
+      "    # so this would represent hypothesis string as 00010(0(hey)0($$ in reference)0(man)1($$ in hypothesis)0(yep)) \n",
