--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -208,3 +208,5 @@
       "    # What this loop does can be explained by an example: Suppose we have total of 3 words and \n",
       "    # we have boundaries after two words in hypothesis  (hey man $$ yep) and after one word in training( hey $$ man yep)\n",
       "    # so this would represent hypothesis string as 00010(0(hey)0($$ in reference)0(man)1($$ in hypothesis)0(yep)) \n",
+      "    # reference string as 01000 (0(hey)1($$ in ref)0(man)0($$ in hypothesis)0(yep))\n",
+      "    while i<len(hypo_words) and j<len(para_words):\n",
