--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -210,3 +210,4 @@
       "    # so this would represent hypothesis string as 00010(0(hey)0($$ in reference)0(man)1($$ in hypothesis)0(yep)) \n",
       "    # reference string as 01000 (0(hey)1($$ in ref)0(man)0($$ in hypothesis)0(yep))\n",
       "    while i<len(hypo_words) and j<len(para_words):\n",
+      "        if hypo_words[i]==para_words[j]:\n",
