--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -211,3 +211,5 @@
       "    # reference string as 01000 (0(hey)1($$ in ref)0(man)0($$ in hypothesis)0(yep))\n",
       "    while i<len(hypo_words) and j<len(para_words):\n",
       "        if hypo_words[i]==para_words[j]:\n",
+      "            hypo_string=hypo_string+'0'\n",
+      "            para_string=para_string+'0'\n",
