Initial Commit from Ember CLI v2.10.0

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -215,3 +215,5 @@
       "            para_string=para_string+'0'\n",
       "            i=i+1\n",
       "            j=j+1\n",
+      "        elif hypo_words[i]=='$$':\n",
+      "            hypo_string=hypo_string+'1'\n",
