--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -217,3 +217,4 @@
       "            j=j+1\n",
       "        elif hypo_words[i]=='$$':\n",
       "            hypo_string=hypo_string+'1'\n",
+      "            para_string=para_string+'0'\n",
