Couple of fixes

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -218,3 +218,5 @@
       "        elif hypo_words[i]=='$$':\n",
       "            hypo_string=hypo_string+'1'\n",
       "            para_string=para_string+'0'\n",
+      "            i=i+1\n",
+      "        elif para_words[j]=='$$':\n",
