--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -220,3 +220,4 @@
       "            para_string=para_string+'0'\n",
       "            i=i+1\n",
       "        elif para_words[j]=='$$':\n",
+      "            hypo_string=hypo_string+'0'\n",
