Minor code refactor

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -221,3 +221,5 @@
       "            i=i+1\n",
       "        elif para_words[j]=='$$':\n",
       "            hypo_string=hypo_string+'0'\n",
+      "            para_string=para_string+'1'\n",
+      "            j=j+1\n",
