--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -223,3 +223,5 @@
       "            hypo_string=hypo_string+'0'\n",
       "            para_string=para_string+'1'\n",
       "            j=j+1\n",
+      "    \n",
+      "    #Small windows produce more negatives, thus WindowDiff recommends using a window size (k) of half the average segment length.\n",
