--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -225,3 +225,5 @@
       "            j=j+1\n",
       "    \n",
       "    #Small windows produce more negatives, thus WindowDiff recommends using a window size (k) of half the average segment length.\n",
+      "    #Referred from this paper: Getting More from Segmentation Evaluation\n",
+      "    \n",
