--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -227,3 +227,4 @@
       "    #Small windows produce more negatives, thus WindowDiff recommends using a window size (k) of half the average segment length.\n",
       "    #Referred from this paper: Getting More from Segmentation Evaluation\n",
       "    \n",
+      "    k=sen_len/2\n",
