--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -228,3 +228,4 @@
       "    #Referred from this paper: Getting More from Segmentation Evaluation\n",
       "    \n",
       "    k=sen_len/2\n",
+      "    return ('%.2f' % windowdiff(hypo_string,para_string,k))"
