Remove unused strings

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -229,3 +229,5 @@
       "    \n",
       "    k=sen_len/2\n",
       "    return ('%.2f' % windowdiff(hypo_string,para_string,k))"
+     ],
+     "language": "python",
