--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -240,3 +240,6 @@
      "collapsed": false,
      "input": [
       "window_diff_score=[]\n",
+      "for i in range(10,110,10):\n",
+      "    window_diff_score.append(window_diff(ref_word,doc,i,i/10))\n",
+      "#plot_fig(range(10,110,10),window_diff_score,'Windowdiff Score variation with Change in Sentence Length')"
