--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -244,3 +244,4 @@
       "    window_diff_score.append(window_diff(ref_word,doc,i,i/10))\n",
       "#plot_fig(range(10,110,10),window_diff_score,'Windowdiff Score variation with Change in Sentence Length')"
      ],
+     "language": "python",
