--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -334,3 +334,4 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "plot_fig(range(10,110,10),window_diff_score,'Variation of Windowdiff with relspect to Sentence Length',12)"
