SCSI: Fix device removal NULL pointer dereference

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -336,3 +336,6 @@
      "input": [
       "plot_fig(range(10,110,10),window_diff_score,'Variation of Windowdiff with relspect to Sentence Length',12)"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
