--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -355,3 +355,5 @@
      "level": 4,
      "metadata": {},
      "source": [
+      "Optimal Psuedo Sentence Length should be 20 as value of Windowdiff is minimum at that point"
+     ]
